Fix #430 Parameter overrides are shown with no clear distinction & Fix #347 [3D Viewer] Improvements on spacing and parameter editor (#714)

--- a/COMETwebapp/Components/Viewer/ViewerBody.razor.css
+++ b/COMETwebapp/Components/Viewer/ViewerBody.razor.css
@@ -6,6 +6,7 @@
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    gap: 10px;
 }
 
 #leftColumn {
